--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "app",
+  "name": "webrtc-postprocessing",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start-dev": "webpack-dev-server --config webpack.config.js  --env development",
+		"build-dev": "webpack --config webpack.config.js --env development",
+		"build-prod": "webpack --config webpack.config.js --env production",
+		"lint": "eslint \"src/js/*.+(js)\"",
+		"format": "prettier --write \"**/*.+(js|ts|json)\""
   },
   "author": "",
   "license": "ISC",
@@ -16,20 +20,21 @@
     "express": "^4.12.3"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-copy": "^4.0.1",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-remove-html-comments": "^1.0.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.1"
+    "@babel/core": "^7.26.9",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.26.9",
+    "@eslint/js": "^9.20.0",
+    "@types/webpack-env": "^1.18.8",
+    "babel-loader": "^9.2.1",
+    "copy-webpack-plugin": "^12.0.2",
+    "eslint": "^9.20.1",
+    "globals": "^15.15.0",
+    "html-webpack-plugin": "^5.6.3",
+    "prettier": "^3.5.1",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
+    "webpack-open-browser": "^2.0.2",
+    "webpack-simple-progress-plugin": "^0.0.5"
   }
 }
